style.css
body {
    font-family: Roboto, sans-serif;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    height: 100vh;
}

.header,.presentation,.information,.quote,.call-to-action,.footer {
    padding: 0 200px;
}

.header, .presentation, .footer {
    background-color: #1F2937;
}

.header {
    padding: 16px 200px;
    display: flex;
    align-items: center;
}

.header-logo {
    flex: 1;
    font-size: 24px;
    color: #F9FAF8;
}

.header-links {
    flex: 1;
    list-style-type: none;
    justify-content: right;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 16px;
}

.secondary-text {
    font-size: 18px;
    color: #E5E7EB;
}

.presentation {
    padding: 100px 200px;
    flex: 1;
    display: flex;
    align-items: stretch;
}

.site-intro{
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.main-text {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

.presentation-image{
    flex: 1;
    background-color: #96989c;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.information {
    flex: 1;
}

.quote {
    background-color: #E5E7EB;
}

.action-banner {
    background-color: #3882F6;
}

.footer {

}

